# blackmagic

./: .gitmodules  CMakeLists.txt  README.md  balckmagic-f411ce.ld  clion_use_jlink.md  version.h
docs/: ibom.html
src/include/: serialno.h
